# libtorchmedia

./: .bashrc  Readme.md
.devcontainer/: devcontainer.json
docker/: Dockerfile
docker/gpu/: docker-compose.yaml
include/libtorchmedia/: _audio_functional.hpp  audio.hpp  utils.hpp
libtorchmedia/include/: _audio_functional.hpp  _audio_io.hpp  _audio_transform.hpp  utils.hpp
py_script/: train_model.py
unit_test/audio_test/: CMakeLists.txt  main.cpp
